--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,7 @@ body, html {
   height: 100%;
 }
 
+body::-webkit-scrollbar, html::-webkit-scrollbar {
+  width: 0px !important;
+  display: none;
+}
