dynamic route -  Product page

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,12 +14,12 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
+  font: inherit;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 100%;
   vertical-align: baseline;
   text-decoration: none;
 }
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -50,10 +43,6 @@ table {
 	border-spacing: 0;
 }
 
-/* 
-   Custom CSS
-*/
-
 #app {
   background: #3CE168;
   color: #fff;
@@ -74,7 +63,8 @@ body, html {
   height: 100%;
 }
 
-body::-webkit-scrollbar, html::-webkit-scrollbar {
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
   width: 0px !important;
   display: none;
 }
